# Neural-Networks-from-Scratch

./: .clang-format  .gitignore  .gitmodules  ActivationFunction.h  CMakeLists.txt  CrossEntropyLoss.h  Layer.cpp  Layer.h  LossFunction.h  MeanSquaredError.h  Network.cpp  Network.h  README.md  SigmoidActivation.h  declarations.h
project-report/: bibl.bib  template.tex  titlepage.sty
src/: CMakeLists.txt  CrossEntropyLoss.cpp  MNISTLoader.cpp  MNISTLoader.h  MeanSquaredError.cpp  MeanSquaredError.h  Network.cpp  Network.h  ReluActivation.h  SigmoidActivation.h  SoftmaxActivation.cpp  SoftmaxActivation.h  TanhActivation.h  declarations.h  main.cpp
tests/: ActivationFunctionTest.cpp  CMakeLists.txt  LayerTest.cpp  LossFunctionTest.cpp  NetworkTest.cpp
